<resources>
    <string name="app_name">Instagram</string>
    <string name="instagram_login_nome">Seu Nome</string>
    <string name="instagram_login_email">Seu e-mail</string>
    <string name="instagram_login_btn_entrar">Entrar</string>
    <string name="instagram_login_cadastrese">Não tem uma conta? Cadastre-se!</string>
    <string name="instagram_login_senha">Sua senha</string>
    <string name="instagram_login_btn_cadastro">Cadastrar</string>
    <string name="instagram_feed_hello">Feed</string>
    <string name="instagram_pesquisar_hello">Pesquisa</string>
    <string name="instagram_postagem_hello">Postagem</string>
    <string name="instagram_perfil_hello">Perfil</string>
    <string name="instagram_perfil_txtpublicacoes">Publicações</string>
    <string name="instagram_perfil_txtseguidores">Seguidores</string>
    <string name="instagram_perfil_txtseguindo">Seguindo</string>
    <string name="instagram_perfil_count_posts">0</string>
    <string name="instagram_perfil_btneditar">EDITAR PERFIL</string>

</resources>