<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_degrade"
    tools:context=".padrao.LoginActivityUI">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/editCadastroNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/editCadastroNome"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_caixa_texto"
        android:ems="10"
        android:hint="@string/instagram_login_nome"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/cinza_medio"
        app:layout_constraintBottom_toTopOf="@+id/editCadastroEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editCadastroEmail"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_caixa_texto"
        android:ems="10"
        android:hint="@string/instagram_login_email"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/cinza_medio"
        app:layout_constraintBottom_toTopOf="@+id/editCadastroSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCadastroNome" />

    <EditText
        android:id="@+id/editCadastroSenha"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_caixa_texto"
        android:ems="10"
        android:hint="@string/instagram_login_senha"
        android:inputType="text|textPassword"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/cinza_medio"
        app:layout_constraintBottom_toTopOf="@+id/buttonCadastroEntrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCadastroEmail" />

    <Button
        android:id="@+id/buttonCadastroEntrar"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_botao_login"
        android:text="@string/instagram_login_btn_cadastro"
        app:backgroundTint="#C9DBE9"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCadastroSenha" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/instagram_login_cadastrese"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/progressBarCadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCadastroEntrar" />

    <ProgressBar
        android:id="@+id/progressBarCadastro"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>